# AI_Incident_Investigator_Backend

./: .gitignore  pyproject.toml
app/: main.py  test_config.py  test_engine.py  test_evidence.py  test_loader.py  test_logger.py  test_service.py
app/api/routes/: incidents.py  investigate.py  timeline.py
app/coral/: client.py  queries.py
app/coral/adapters/: coral_adapter.py  mock_adapter.py
app/core/: config.py  exceptions.py  logger.py  settings.py
app/correlation/: engine.py  heuristics.py  scoring.py  timeline.py
app/mock_data/: deployments.json  incidents.json  metrics.json  outages.json
app/models/: evidence.py  incident.py  investigation_request.py  investigation_response.py  summary.py
app/services/: ai_investigation_service.py  ai_summary_service.py  data_loader.py  evidence_service.py  executive_report_service.py  gemini_service.py  hypothesis_service.py  incident_service.py  recommendation_service.py
app/timeline/: builder.py
tests/: test_coral.py  test_engine.py  test_incident.py  test_scoring.py  test_services.py  test_summary.py  test_timeline.py
